--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "2.7"
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-# install: 
+install:
+  pip install tornado
+  pip install redis
 # command to run tests, e.g. python setup.py test
 # script:  PLEASE CHANGE ME
