--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  pip install tornado
-  pip install redis
+  - "pip install tornado"
+  - "pip install redis"
 # command to run tests, e.g. python setup.py test
 # script:  PLEASE CHANGE ME
